# django_adminlte3

./: pyproject.toml
adminlte3_theme/templates/admin/: base.html  base_login.html  login.html
src/adminlte3/templates/adminlte/lib/: _main_sidebar.html
src/adminlte3_theme/templates/admin/: index.html
src/adminlte3_theme/templatetags/: admin_menu.py
