[tool.poetry]
name = "django_adminlte3"
version = "0.0.2"
description = "django_adminlte3"
authors = ["voronadenis <d.vorona@forteholding.ru>"]
repository = "https://github.com/voronadenis/django_adminlte3"
packages = [
    { include = "adminlte3", from="src" },
    { include = "adminlte3_theme", from="src" },
]